install/kubernetes/istio-networking/destination-rule-all.yaml
# Copyright (c) 2019 Huawei Technologies Co., Ltd. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: apiserver
  namespace: opensds
spec:
  host: apiserver.opensds.svc.cluster.local
  subsets:
    - name: v1beta
      labels:
        version: v1beta
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: controller
  namespace: opensds
spec:
  host: controller.opensds.svc.cluster.local
  subsets:
    - name: v1beta
      labels:
        version: v1beta
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: dock
  namespace: opensds
spec:
  host: dock.opensds.svc.cluster.local
  subsets:
    - name: v1beta
      labels:
        version: v1beta
---
