install/kubernetes/istio-networking/service-entry-db.yaml
# Copyright (c) 2019 Huawei Technologies Co., Ltd. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-etcd-db
  namespace: opensds
spec:
  hosts:
    - localhost
  addresses:
    - 127.0.0.1/32
  location: MESH_EXTERNAL
  ports:
    - number: 2379
      name: tcp-db1
      protocol: TCP
    - number: 2380
        name: tcp-db2
        protocol: TCP
    resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: external-etcd-db
  namespace: opensds
spec:
  hosts:
    - localhost
  http:
    - timeout: 5s
      route:
        - destination:
            host: localhost
---
